code/*eshell*
Welcome to the Emacs shell

~/oi/code $ g++ BZOJ2212.cpp -o BZOJ2212.exe
BZOJ2212.cpp: In function ‘void Calc(int)’:
BZOJ2212.cpp:54:32: error: ‘Size’ was not declared in this scope
   Modify(root[u],1,n,Key[u],1);Size[u]=1;return;
                                ^
~/oi/code $ g++ BZOJ2212.cpp -o BZOJ2212.exe
~/oi/code $ ./BZOJ2122.exe
./BZOJ2122.exe: command not found
~/oi/code $ ./BZOJ2212.exe